# legacy-to-fhir-mcp-server

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
data/: legacy.db
legacy_data/: extract.py  mangle.py  schema.py
mapping/: fhir-mapping-schema.md
mcp_server/: codes.py  datetimes.py  fhir_build.py  legacy_repo.py  server.py  validation.py
scripts/: build_legacy_db.py  demo.py  test_query_legacy_patient_records.py  test_translate_vitals_log.py  test_validation_layer.py  verify_legacy_mess.py
